--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -14,10 +14,24 @@
   .heroBanner {
     padding: 2rem;
   }
+  .hero_title {
+    font-size: 3rem;
+  }
+  .hero_subtitle {
+    font-size: 1.5rem;
+  }
 }
 
 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.hero_title {
+  font-size: 2.4rem;
+}
+
+.hero_subtitle {
+  font-size: 1.25rem;
 }
